--- a/Practice/04Effects_in_jQuery/03Slide_effect.html
+++ b/Practice/04Effects_in_jQuery/03Slide_effect.html
@@ -57,7 +57,7 @@
     <div class="box">Slide Effect in jQuery</div>
 
     <!-- jQuery CDN -->
-    <script src="../cdn.js"></script>
+    <script src="../../cdn.js"></script>
     
     <script>
         $('*').css({
